@@ -328,7 +328,7 @@ test scan-4.60 {Tcl_ScanObjCmd, set errors} {
 	    $msg $x $y]
     unset z
     set result
-} {1 {couldn't set variable "z"} abc ghi}
+} {1 {can't set "z": variable is array} abc ghi}
 test scan-4.61 {Tcl_ScanObjCmd, set errors} {
     set x {}
     catch {unset y}; array set y {}
@@ -338,7 +338,7 @@ test scan-4.61 {Tcl_ScanObjCmd, set errors} {
     unset y
     unset z
     set result
-} {1 {couldn't set variable "z"couldn't set variable "y"} abc}
+} {1 {can't set "z": variable is array} abc}
 
 # procedure that returns the range of integers
 
@@ -545,27 +545,27 @@ test scan-8.12 {error conditions} {
     catch {unset a}
     set a(0) 44
     list [catch {scan 44 %d a} msg] $msg
-} {1 {couldn't set variable "a"}}
+} {1 {can't set "a": variable is array}}
 test scan-8.13 {error conditions} {
     catch {unset a}
     set a(0) 44
     list [catch {scan 44 %c a} msg] $msg
-} {1 {couldn't set variable "a"}}
+} {1 {can't set "a": variable is array}}
 test scan-8.14 {error conditions} {
     catch {unset a}
     set a(0) 44
     list [catch {scan 44 %s a} msg] $msg
-} {1 {couldn't set variable "a"}}
+} {1 {can't set "a": variable is array}}
 test scan-8.15 {error conditions} {
     catch {unset a}
     set a(0) 44
     list [catch {scan 44 %f a} msg] $msg
-} {1 {couldn't set variable "a"}}
+} {1 {can't set "a": variable is array}}
 test scan-8.16 {error conditions} {
     catch {unset a}
     set a(0) 44
     list [catch {scan 44 %f a} msg] $msg
-} {1 {couldn't set variable "a"}}
+} {1 {can't set "a": variable is array}}
 catch {unset a}
 test scan-8.17 {error conditions} {
     list [catch {scan 44 %2c a} msg] $msg
